--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,48 +1,14 @@
-{% comment %}
-    <h1>Заголовок</h1> — главный заголовок страницы
-    <h2>Подзаголовок</h2> — для заголовков второго уровня
-    <h3>Заголовок третьего уровня</h3> … и так далее, вплоть до <h6>
-    <p>Параграф</p>
-    <em>текст</em> — курсивный шрифт
-    <strong>текст</strong> — жирный шрифт
-    <br> — переход на следующую строку (внутрь br нельзя ничего поместить, также для него нет закрывающего тега)
-    <a href="https://djangogirls.org">link</a> создаёт ссылку
-    <ul><li>первый элемент</li><li>второй элемент</li></ul> создаёт список, такой же как этот!
-    <div></div> определяет раздел страницы
-{% endcomment %}
+{% extends 'blog/base.html' %}
 
-
-<html>
-    <head>
-        <title>My blog</title>
-    </head>
-    <body>
-        <div>
-            <h1><a href="/">My Blog</a></h1>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                <p>Опубликовано: {{ post.published_date }}</p>
+            </div> 
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+            - - - - - - - - - - - - - - - - - - - - -
         </div>
-
-        {% comment %} 
-        <div>
-            <h2><a href="">My first post</a></h2>
-            <p>published: 01.04.2025, 12:14</p>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        </div>
-
-        <div>
-            <h2><a href="">My second post</a></h2>
-            <p>published: 01.04.2025, 12:14</p>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
-        </div> 
-        {% endcomment %}
-        
-        {% for post in posts %}
-            <div>
-                <p>published: {{ post.published_date }}</p>
-                <h1><a href="">{{ post.title }}</a></h1>
-                <p>{{ post.text|linebreaksbr }}</p>
-            </div>
-        {% endfor %}
-            
-
-    </body>
-</html>
+    {% endfor %}
+{% endblock %}
