--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,13 +17,11 @@
 <html>
     <head>
         <title>My blog</title>
-
         {% comment %} Установка Bootstrap {% endcomment %}
         <link rel="stylesheet" 
               href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" 
               href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        
         {% comment %} Шрифт Lobster из шрифтов Google {% endcomment %}
         <link rel="stylesheet"
               href="https://fonts.googleapis.com/css?family=Lobster&subset=latin,cyrillic"
@@ -33,6 +31,11 @@
     </head>
     <body>
         <div class="page-header">
+            {% if user.is_authenticated %}
+                <a href="{% url 'post_new' %}" class="top-menu">
+                    <span class="glyphicon glyphicon-plus"></span>
+                </a>
+            {% endif %}
             <h1><a href="/">My Blog</a></h1>
         </div>
         <div class="content container">
