--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,11 +3,13 @@
 {% block content %}
     {% for post in posts %}
         <div class="post">
+            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
             <div class="date">
                 <p>Опубликовано: {{ post.published_date }}</p>
-            </div> 
-            <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
-            <p>{{ post.text|linebreaksbr }}</p>
+                <p>Опубликовано: {{ post.author }}</p>
+            </div>
+            <p>***</p>
+            <p>{{ post.text }}</p>
             - - - - - - - - - - - - - - - - - - - - -
         </div>
     {% endfor %}
